fixed popular component layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -58,3 +58,6 @@ code {
   width: 50%;
   height: 50%;
 }
+.product-box{
+  background-color: #EEEDED;
+}
